# buff-em

./: AUTHORS  COPYRIGHT  INSTALL  Makefile.am  NEWS  README  README.md  ag  configure.ac  index.html  tex
doc/: README.md  mkdocs.yml
doc/buff-em-mkdocs-theme/: base.html  breadcrumbs.html  footer.html
doc/docs/: index.md
doc/docs/API/: libbuff.md
doc/docs/applications/: buff-analyze.md  buff-neq.md  buff-scatter.md
doc/docs/examples/: Links
doc/docs/examples/JanusParticleNEQ/: index.md
doc/docs/examples/JanusParticlePlaneWave/: index.md
doc/docs/examples/JanusParticles/: index.md
doc/docs/examples/MieScattering/: Mie.math  index.md
doc/docs/reference/: BUFFvsSCUFF.md  Geometries.md  Installing.md  SVTensors.md  TopLevel.md
doc/docs/tex/: WhatBNComputes.tex  buff-em-tex.md  buff-em.bib  buff-em.tex  bufftex.tex  m2
doc/reference/: Materials.md  RenameMesh3D  SVTensors.md
examples/: Makefile.am
examples/JanusParticles/: CoatedSphere.geo  Makefile.am  Sphere.geo  Sphere_1727.vmsh
examples/MieScattering/: GoldSphere_1675.buffgeo  GoldSphere_637.buffgeo  GoldSphere_677.buffgeo  Makefile.am  Mie.math  SiCSphere_1675.buffgeo  SiCSphere_637.buffgeo  SiCSphere_677.buffgeo  Sphere_1675.vmsh  Sphere_637.vmsh
examples/PhotonTorpedoes/: CoatedSphere.SVTensor  Makefile.am
examples/Pinwheels/: Makefile.am  Pinwheel.geo
examples/SiO2Spheres/: Makefile.am  Plotter.gp  SiO2Sphere_637.buffgeo  SiO2Sphere_677.buffgeo  SiO2Spheres_637.buffgeo  SiO2Spheres_677.buffgeo  Sphere.geo  Sphere_677.vmsh  Spheres.trans
m4/: Makefile  Makefile.am  Makefile.in  libtool.m4  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4
src/: Makefile.am
src/applications/: Makefile.am
src/applications/buff-analyze/: Makefile  Makefile.am  buff-analyze.cc
src/applications/buff-cas3D/: CasimirIntegrand.cc  CreateBC3Data.cc  Makefile  SumsIntegrals.cc  buff-cas3D.cc  buff-cas3D.h
src/applications/buff-neq/: CreateBNEQData.cc  GetFlux.cc  GetTemperatureDependence.cc  Makefile.am  Makefile.manual  MomentPFT.cc  Quadrature.cc  TraceFormulas.cc  VSWPFT.cc  buff-neq.cc  buff-neq.h  buff-neq0.cc
src/applications/buff-remesh/: Makefile  buff-remesh.cc
src/applications/buff-scatter/: Makefile  Makefile.am  OutputModules.cc  buff-scatter.cc  buff-scatter.h
src/interactiveTests/: ExpandCurrentDistribution.cc  Makefile.manual  t1BFFields.cc  t1BFSITerms.cc  tAllIntegrals.cc  tDQMoments.cc  tExpRel.cc  tFaceFaceInt.cc  tFaceInt.cc  tGDerivatives.cc  tGMatrixElement.cc  tPoynting.cc  tSingularIntegrals.cc  tTetInt.cc  tTetTetInt.cc  tUElement.cc  tUElement2.cc  tVInverseElement.cc
src/libs/: Makefile.am
src/libs/libTTaylorDuffy/: GetUpsilon_CommonEdge_TMuBDotBP1.cc  GetUpsilon_CommonEdge_TMuBDotBP2.cc  GetUpsilon_CommonEdge_TMuBDotBP3.cc  GetUpsilon_CommonEdge_TMuBDotBP4.cc  GetUpsilon_CommonEdge_TMuBDotBP5.cc  GetUpsilon_CommonEdge_TMuBDotBP6.cc  GetUpsilon_CommonTet_TMuBDotBP1.cc  GetUpsilon_CommonTet_TMuBDotBP2.cc  GetUpsilon_CommonTet_TMuBDotBP3.cc  GetUpsilon_CommonTet_TMuBDotBP4.cc  GetUpsilon_CommonTet_TMuBDotBP5.cc  GetUpsilon_CommonTet_TMuBDotBP6.cc  GetUpsilon_CommonTriangle_TMuBDotBP1.cc  GetUpsilon_CommonTriangle_TMuBDotBP2.cc  GetUpsilon_CommonTriangle_TMuBDotBP3.cc  GetUpsilon_CommonTriangle_TMuBDotBP4.cc  GetUpsilon_CommonTriangle_TMuBDotBP5.cc  GetUpsilon_CommonTriangle_TMuBDotBP6.cc  Makefile.am  TTaylorDuffy.cc  TTaylorDuffy.h  TTaylorDuffy_20150411.cc  TTaylorDuffy_Original.cc
src/libs/libTTaylorDuffy/UpsilonFiles/: Upsilon_CommonEdge_RMuBDotBP_Take1.cc  Upsilon_CommonEdge_TMuBDotBP.cc  Upsilon_CommonEdge_TMuUnity.cc  Upsilon_CommonTet_RMuUnity.cc  Upsilon_CommonTet_TMuBDotBP.cc  Upsilon_CommonTet_TMuUnity.cc  Upsilon_CommonTriangle_BDotBP.cc  Upsilon_CommonTriangle_RMuBDotBP.cc  Upsilon_CommonTriangle_RMuBDotBP_Take1.cc  Upsilon_CommonTriangle_RMuUnity.cc  Upsilon_CommonTriangle_TMuBDotBP.cc  Upsilon_CommonTriangle_TMuUnity.cc
src/libs/libbuff/: Cubature.cc  DSIPFT.cc  EMTPFT.cc  FIBBICache.cc  FIBBICache.h  GMatrixElements.cc  GetFields.cc  GetFluxDensities.cc  GetPFT.cc  IHAIMatProp.cc  IHAIMatProp.h  InitFaceList.cc  JDEPFT.cc  Makefile  Makefile.am  MomentPFT.cc  OPFT.cc  OverlapIntegrals.cc  PFT.cc  RHSVector.cc  ReadGMSHFile.cc  SVTensor.cc  SVTensor.h  SWGGeometry.cc  SWGVolume.cc  TGFluctuations.h  TGMatrices.cc  TTaylorDuffy.cc  TTaylorDuffy.h  TaskTiming.cc  TetCR.cc  TetTetInt_SI.cc  TetTetInt_TD.cc  VIEMatrix.cc  Visualize.cc  libbuff.h  rwlock.h
src/libs/libbuff/OldCodeFiles/: GMatrixElement_DA.cc  TGFluctuations.cc  TetTetInt_SI.cc  TetTetInt_TD.cc
src/libs/libbuff/UpsilonFiles/: Makefile.am  Upsilon_CommonEdge_BDotBP.cc  Upsilon_CommonEdge_RMuBDotBP.cc  Upsilon_CommonEdge_RMuUnity.cc  Upsilon_CommonEdge_TMuBDotBP.cc  Upsilon_CommonEdge_Unity.cc  Upsilon_CommonTet_BDotBP.cc  Upsilon_CommonTet_RMuBDotBP.cc  Upsilon_CommonTet_RMuBDotBP_Old.cc  Upsilon_CommonTet_Unity.cc  Upsilon_CommonTriangle_TMuBDotBP.cc  Upsilon_CommonTriangle_Unity.cc
src/tests/: ExpandCurrentDistribution.cc  t1BFFields.cc  t1BFSITerms.cc  tAllIntegrals.cc  tExpRel.cc  tGDerivatives.cc  tSingularIntegrals.cc  tTetTetInt.cc  tUElement.cc  tUElement2.cc  tVInverseElement.cc
src/unitTests/: E10Sphere_533.buffgeo  EPFile.XAxis  Makefile.am  Sphere_48.vmsh  Sphere_533.msh  unit-test-FIBBICache  unit-test-FIBBICache.cc  unit-test-GMatrixElement.cc  unit-test-LFField.cc
tex/: OldBUFFMemo.tex  TaylorDuffy.tex  buff-em.tex
tex/TaylorDuffy/: BruteForce.math  DefineP.math  DefinePBar.math  DuffyTransformations.math  DuffyTransformedIntegrals.math  GetScriptP.math  GetScriptP_CommonPanel.math  GetScriptP_CommonTet.math  GetUpsilon.math  GetX.cc  GetXiLimits.math  Int1QuadrantHR.jl  Int1QuadrantMC.jl  MCIntegral.jl  PlotBoundaryLines.jl  ScriptP_CommonTet.cc  SubRegions.math  SubRegionsFull.math  TD.math  TDBF.cc  TDIntegrals.cc  TDIntegrals.math  TOL6.jl  TestOmegaLimits3.jl  TestOmegaLimits7.jl  TestRegions.cc  WriteCoefficientRules.math  WriteScriptP.math  WriteUpsilon.math  WriteXdFunctions.math  WriteXiLimits.math  Xi2Lower.jl  Xi3Lower.jl  XiUpper.jl  tTDIntegrals.cc
(+37 files in other folders)
