EXTRA_DIST=				\
 RenameMesh3D                           \
 OmegaFile				\
 Sphere_637.vmsh			\
 Sphere_1727.vmsh			\
 Mie.math             			\
 SiCSphere_637.buffgeo			\
 GoldSphere_637.buffgeo			\
 Sphere.geo

pkgdatadir = $(datadir)/buff-em/examples/MieScattering
nodist_pkgdata_DATA = ${EXTRA_DIST}
