EXTRA_DIST=				\
 RenameMesh3D                           \
 OmegaFile				\
 Sphere_677.vmsh			\
 Sphere_1675.vmsh			\
 Mie.math             			\
 SiCSphere_677.buffgeo			\
 GoldSphere_677.buffgeo			\
 SiCSphere_1675.buffgeo			\
 GoldSphere_1675.buffgeo		\
 Sphere.geo

pkgdatadir = $(datadir)/buff-em/examples/MieScattering
nodist_pkgdata_DATA = ${EXTRA_DIST}
