noinst_LTLIBRARIES = libTTaylorDuffy.la
pkginclude_HEADERS = TTaylorDuffy.h
libTTaylorDuffy_la_SOURCES = 		\
 TTaylorDuffy.cc      			\
 TTaylorDuffy.h

# GetUpsilon_CommonTet_TMuBDotBP1.cc	\
# GetUpsilon_CommonTet_TMuBDotBP2.cc	\
# GetUpsilon_CommonTet_TMuBDotBP3.cc	\
# GetUpsilon_CommonTet_TMuBDotBP4.cc	\
# GetUpsilon_CommonTet_TMuBDotBP5.cc	\
# GetUpsilon_CommonTet_TMuBDotBP6.cc	\
# GetUpsilon_CommonTriangle_TMuBDotBP1.cc	\
# GetUpsilon_CommonTriangle_TMuBDotBP2.cc	\
# GetUpsilon_CommonTriangle_TMuBDotBP3.cc	\
# GetUpsilon_CommonTriangle_TMuBDotBP4.cc	\
# GetUpsilon_CommonTriangle_TMuBDotBP5.cc	\
# GetUpsilon_CommonTriangle_TMuBDotBP6.cc	\
# GetUpsilon_CommonEdge_TMuBDotBP1.cc	\
# GetUpsilon_CommonEdge_TMuBDotBP2.cc	\
# GetUpsilon_CommonEdge_TMuBDotBP3.cc	\
# GetUpsilon_CommonEdge_TMuBDotBP4.cc	\
# GetUpsilon_CommonEdge_TMuBDotBP5.cc	\
# GetUpsilon_CommonEdge_TMuBDotBP6.cc

# the UpsilonFiles/Upsilon_*.cc files are #included by 
# TTaylorDuffy.cc, so I don't want to include them in 
# SOURCES above, but I do need them to be packaged together 
# with the distribution
SUBDIRS = UpsilonFiles
